syntax="proto3";
option java_multiple_files = true;
option java_package = "io.grpc.unipi.distributed";
option java_outer_classname = "ApiProto";
option objc_class_prefix = "HLW";
package org.example.distributed;

service DistributeAuthentication{
<<<<<<< HEAD
        rpc authLogin(UserName)returns(APIResponse);
=======
        rpc doAuthLogin(UserName)returns(APIResponse);
>>>>>>> 5c60f69a4df0f7f2dae7d4d118635438ed30ce0a
}

message APIResponse{
        string responseMessage = 1;
        int32 messageCode = 2;
}


message UserName{
        string userName = 1;
        string passWord = 2;
<<<<<<< HEAD
}
=======
}
>>>>>>> 5c60f69a4df0f7f2dae7d4d118635438ed30ce0a
